--- a/StonkMarket/styles/stonks.css
+++ b/StonkMarket/styles/stonks.css
@@ -4,80 +4,78 @@
 
 body {
   background-color: white;
+  overflow-x: hidden;
 }
+
 .header_container {
   display: grid;
-  width: 80%;
+  width: 100%;
   background-color: white;
-  grid-template-columns: 10% 300px auto 10%;
+  grid-template-columns: 100px 200px 1fr 200px 100px;
+  grid-template-rows: 55px 110px 135px;
 }
 
-.main_container {
-  display: grid;
-  width: 80%;
-  background-color: white;
-}
 /*COMPUTER IMAGE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 .comp {
-  width: 300px;
-  height: 300px;
-  grid-column: 1/1;
-  grid-row: 1/2;
+  width: 100%;
+  height: 100%;
+  grid-column: 1/3;
+  grid-row: 1/4;
 }
 
-#comp1{
+.comp2 {
+  width: 100%;
+  height: 100%;
+  grid-column: 4/6;
+  grid-row: 1/4;
+}
+#comp1, #comp3{
   z-index: 4;
 }
 
-#comp2 {
+#comp2, #comp4 {
   z-index: 1;
 }
 
 /*HEADER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 #headcanvas {
-  position: fixed;
-  top: 55px;
-  left: 10%;
+  grid-column: 1/5;
+  grid-row: 2/2;
   z-index: 3;
-  grid-row: 1/1;
 }
 
 #grid {
+  margin-top: 55px;
   background-image: url("../images/grid.png");
   background-repeat: repeat-x;
   background-size: 500px;
-  position: fixed;
+  grid-row: 2/2;
+  grid-column: 1/5;
   height: 50px;
   width: 120%;
-  top: 120px;
-  left: 10%;
+  left: 0;
   z-index: 2;
   animation: slide 10s linear infinite;
 }
 
-#bg1 {
-  width: 100px;
-  height: 300px;
-  z-index: 3;
-  background-color: #025482;
-  position: fixed;
-  left: 10%;
-}
 #bg2 {
-  width: 10%;
-  height: 300px;
+  width: 100px;
+  height: 100%;
+  margin: 0;
+  grid-column: 1/1;
+  grid-row: 1/4;
   z-index: 3;
   background-color: #025482;
-  position: fixed;
-  left: 0;
+
 }
 #bg3 {
-  width: 10%;
-  height: 300px;
+  width: 100px;
+  height: 100%;
+  margin: 0;
+  grid-column: 5/5;
+  grid-row: 1/4;
   z-index: 3;
   background-color: #025482;
-  position: fixed;
-  right: 0;
 }
 
 @keyframes slide {
@@ -89,11 +87,47 @@ body {
   }
 }
 
-h1 {
-  text-align: center;
-  object-position: center;
-  color: #fff;
-  position: fixed;
-  top: 225px;
-  left: 40%;
+.stonklogo {
+  grid-column: 3/3;
+  grid-row:3/3;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  z-index: 6;
+  background-color: linear-gradient(to bottom, #2a475e, black);
+}
+
+/*MENU %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+.menu_container{
+  height:127px;
+  background-color: black;
+  border: 1px solid white;
+}
+
+/*MAIN CONTIAINER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+.main_container {
+  display: grid;
+  width: 100%;
+  background-color: white;
+  grid-template-columns: auto 700px auto;
+  grid-template-rows: 100px 400px 300px;
+}
+
+.monitor {
+  grid-row: 1/4;
+  grid-column: 2/2;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  z-index: 3;
+}
+
+.screen {
+  background-image: url("../images/static.png");
+  background-repeat: repeat;
+  grid-column: 2/2;
+  grid-row: 2/2;
+  height: 100%;
+  width: 80%;
+
 }
