--- a/docs/styles/stonks.css
+++ b/docs/styles/stonks.css
@@ -22,9 +22,10 @@ body {
   background-color: white;
   grid-template-columns: 100px 200px 1fr 200px 100px;
   grid-template-rows: 55px 110px 135px;
+  overflow-x: hidden;
 }
 
-/*COMPUTER IMAGE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+/*COMPUTER IMAGE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 .comp {
   width: 100%;
   height: 100%;
@@ -46,7 +47,7 @@ body {
   z-index: 1;
 }
 
-/*HEADER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+/*HEADER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 #headcanvas {
   grid-column: 1/5;
   grid-row: 2/2;
@@ -106,13 +107,14 @@ body {
   background-color: linear-gradient(to bottom, #2a475e, black);
 }
 
-/*MENU %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+/*MENU %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
 .menu_container{
   height:127px;
   display: grid;
   grid-template-columns: 50% 50% 100px;;
   grid-template-rows: 25px 102px;
   background-color: black;
+  overflow-x: hidden;
 
 }
 #inputtxt, #movertxt {
@@ -150,19 +152,21 @@ body {
   flex-direction: row;
   flex-wrap: nowrap;
   width: 102px;
-  height: 100%;
+  height: 102px;
   border: 0px;
   cursor: grab;
   background-color: black;
   padding: 0px auto;
   background-image: url("../images/floppy.png");
-  background-size: contain;
+  background-size: cover;
   background-color: grey;
   background-repeat: no-repeat;
   color: #16DB65;
   font-weight: 800;
   font-size: 20px;
+  outline: none;
 }
+
 
 @keyframes slide2 {
   0%{
@@ -173,13 +177,14 @@ body {
   }
 }
 
-/*MAIN CONTIAINER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+/*MAIN CONTIAINER %%%%%%%%%%%%%%%%%%%%%%&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&%%%%%%%%*/
 .main_container {
   display: grid;
   width: 100%;
   background-color: white;
   grid-template-columns: auto 700px auto;
-  grid-template-rows: 100px 400px 300px;
+  grid-template-rows: 100px 400px 300px 100px 100px 200px;
+  overflow: hidden;
 }
 
 .monitor {
@@ -207,4 +212,70 @@ body {
   height: 100%;
   width: 80%;
   background-color: white;
+  display: grid;
+  grid-template-columns: 20px 30px auto 30px 20px;
+  grid-template-rows: 20px 30px auto 30px 20px;
+  background-color: #29290d;
+}
+
+#chartarea {
+  grid-column: 3/3;
+  grid-row: 3/3;
+  height: 100%;
+  width: 100%;
+}
+
+#ticker {
+  grid-column: 3/3;
+  text-align: center;
+  grid-row: 2/2;
+  color: #1dd623;
+  font-size: 25px;
+}
+
+/*CSS DESK! ******%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
+.top, .leg {
+  background-image: url("../images/woodbg1.png");
+  background-color: white;
+  background-repeat: repeat;
+  background-size: 400px;
+  height: 100%;
+  width: 100%;
+  border: 3px solid black;
+  z-index: 2;
+}
+
+.leg {
+  background-image: url("../images/woodbg2.png");
+  width: 75px;
+  z-index: 1;
+}
+
+#desk1 {
+  grid-column: 1/4;
+  grid-row: 3/3;
+}
+
+#desk2 {
+  grid-column: 1/4;
+  grid-row: 4/4;
+}
+
+#leg1 {
+  margin-left: 0px;
+  grid-column: 1/1;
+  grid-row: 5/7;
+}
+
+#leg2 {
+  margin-right: 0px;
+  grid-column: 3/3;
+  grid-row: 5/7;
+}
+
+.footer {
+  grid-column: 1/4;
+  grid-row: 6/6;
+  height: 100%;
+  width: 100%;
 }
